# s3-connector-for-pytorch

./: DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: documentation.yml  python-checks.yml  python-integration.yml  wheels.yml
docs/: TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-05-26-uv-hatch-maturin-packaging.md
docs/superpowers/specs/: 2026-05-26-single-s3torchconnector-wheel-design.md  2026-05-26-uv-hatch-maturin-packaging-design.md
s3torchbenchmarking/: pyproject.toml
s3torchconnector/: README.md  pyproject.toml
s3torchconnector/src/s3torchconnector/: s3checkpoint.py  s3iterable_dataset.py  s3map_dataset.py
s3torchconnector/src/s3torchconnector/_s3client/: __init__.py  _s3client.py  s3client_config.py
s3torchconnector/src/s3torchconnector/dcp/: s3_file_system.py
s3torchconnector/src/s3torchconnector/lightning/: s3_lightning_checkpoint.py
s3torchconnector/src/s3torchconnector/s3reader/: constructor.py  dcp_optimized.py
s3torchconnector/tst/unit/: test_checkpointing.py  test_s3_client.py  test_s3_client_config.py  test_s3iterable_dataset.py  test_s3mapdataset.py  test_s3reader_constructor.py  test_s3reader_dcp_optimized.py
s3torchconnector/tst/unit/dcp/: test_s3_file_system.py  test_s3_storage_reader.py  test_s3_storage_writer.py
s3torchconnector/tst/unit/lightning/: test_s3_lightning_checkpoint.py
s3torchconnectorclient/: Cargo.toml  README.md  pyproject.toml
s3torchconnectorclient/python/src/s3torchconnectorclient/: _mountpoint_s3_client.pyi
s3torchconnectorclient/python/tst/unit/: test_mountpoint_s3_client.py
s3torchconnectorclient/rust/src/: mock_client.rs  mountpoint_s3_client.rs
