[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "s3torchbenchmarking"
version = "0.0.1"
description = "Tools to run and compare benchmarks against various PyTorch connectors like the s3torchconnector."
requires-python = ">=3.8,<3.15"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "s3torchconnector[lightning,dcp]",
    "boto3",
    "click",
    "hydra-core",
    "pandas",
    "pillow",
    "prefixed",
    "psutil",
    "pynvml",
    "requests",
    "s3fs>=2024", # prevents "UserWarning: Your installed version of s3fs is very old" type of warnings
    "torchdata<0.10.0", # we have dependency on deprecated DataPipes, which were removed in 0.10.0
    "torchvision",
    "transformers",
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
s3torch-datagen = "s3torchbenchmarking.datagen:synthesize_dataset"

[tool.uv.sources]
s3torchconnector = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/s3torchbenchmarking"]

[tool.hatch.build.targets.wheel.force-include]
"conf" = "s3torchbenchmarking/conf"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/conf",
    "/src",
    "/tst",
    "/pyproject.toml",
]
